# shplot-old

./: .commitlintrc.yaml  .cspell.json  .editorconfig  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.js  CHANGELOG.md  LICENSE  LICENSE.md  README.md  mkdocs.yml  plot_demos.py  project-words.txt  pyproject.toml  tox.ini  versions.json
.github/workflows/: build-site.yml  check-pr.yml  checks-run.yml  github-release.yml  pypi-publish.yml  release-new-version.yml  release-please.yml  run-tests.yml  tests-run.yml  update-pre-commit-hooks.yml
.github/workflows-disabled/: build-site.yml  checks-run.yml  github-release.yml  pypi-publish.yml  tests-run.yml
1.3/: sitemap.xml
1.4/: 404.html  index.html  objects.inv
1.4/search/: search_index.js  search_index.json
1.4/usage/: shplot.html  shplot.profiles.builtin.html  shplot.profiles.html
1.5/: objects.inv  sitemap.xml
1.5/CHANGELOG/: index.html
1.5/search/: search_index.json
1.5/usage/shplot/profiles/builtin/: index.html
1.6/: 404.html
1.6/CHANGELOG/: index.html
1.6/LICENSE/: index.html
1.6/search/: search_index.json
1.7/CHANGELOG/: index.html
1.7/search/: search_index.json
1.7/usage/shplot/profiles/: index.html
2.0/: sitemap.xml
2.0/CHANGELOG/: index.html
2.0/search/: search_index.json
2.1/: sitemap.xml
2.1/CHANGELOG/: index.html
2.1/search/: search_index.json
2.1/usage/SUMMARY/: index.html
2.1/usage/shplot/: index.html
2.2/: index.html
2.2/CHANGELOG/: index.html
2.2/search/: search_index.json
2.2/usage/shplot/profiles/: index.html
2.2/usage/shplot/profiles/builtin/: index.html
docs/: index.md  make.sh  shplot.md  shplot.profiles.builtin.md  shplot.profiles.md
scripts/: commit_and_tag_version.py  gen_site_usage_pages.py  make_docs.sh  verify_pr_commits.py
shplot/: __init__.py  _shplot.py
shplot/profiles/: __init__.py  _interface.py  builtin.py
src/shplot/: _shplot.py
src/shplot/profiles/: _interface.py  builtin.py
tests/: test_doctests.py  test_profiles.py  test_shplot.py
www/: gen_ref_pages.py
www/src/theme/overrides/: main.html
www/src/usage/: shplot.md  shplot.profiles.builtin.md  shplot.profiles.md
