[tool.poetry]
name = "shplot"
version = "0.0.0"  # managed by `poetry-dynamic-versioning`
description = "Wrapper for Matplotlib/Seaborn"
authors = ["Jayanth Koushik <mail@jkoushik.me>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/jayanthkoushik/shplot-old"
packages = [
  { include = "shplot" },
]
include = [
  { path = "tests", format = "sdist" },
  { path = "docs", format = "sdist" },
  { path = "CHANGELOG.md", format = "sdist" },
]
exclude = [
  "docs/make.sh",
  "www"
]

# keywords = [
# ]
classifiers = [
  "Development Status :: 4 - Beta",
  "Natural Language :: English",
  "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.8.1"
typing_extensions = { version = "^4.0", python = "<3.9" }
seaborn = "^0.12"
corgy = "^9.2"

[tool.poetry.extras]

[tool.poetry.dev-dependencies]
pre-commit = "^2.0"
black = "^22.0"
isort = "^5.1"
pylint = "^2.14"
mypy = "^1.1"
pydocstyle = "^6.1"
flake8 = "^7.0"
sphinx = "^5.3"
sphinx-markdown-builder = { git = "https://github.com/clayrisser/sphinx-markdown-builder" }
mkdocstrings = { extras = ["python-legacy"], version = "^0.22.0" }
mkdocs-material = "^9.1.15"
mike = "^1.1.2"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[tool.poetry-dynamic-versioning.substitution]
files = ["*/_version.py"]

[tool.black]
line_length = 88
skip_magic_trailing_comma = true

[tool.isort]
profile = "black"
line_length = 88
combine_as_imports = true
force_alphabetical_sort_within_sections = true

[tool.pylint.FORMAT]
max-line-length = 88

[tool.pylint.'MESSAGES CONTROL']
disable = """
  fixme,
  duplicate-code,
  missing-docstring,
  invalid-name,
  ungrouped-imports,
  wrong-import-order,
  wrong-import-position,
  import-outside-toplevel,
  unused-argument,
  no-member,
  protected-access,
  attribute-defined-outside-init,
  too-few-public-methods,
  too-many-public-methods,
  too-many-ancestors,
  too-many-instance-attributes,
  too-many-arguments,
  too-many-locals,
  too-many-statements,
  too-many-lines,
  too-many-branches,
  too-many-nested-blocks,
  too-many-return-statements,
  too-many-boolean-expressions,
"""

[tool.mypy]
ignore_missing_imports = true

[tool.pydocstyle]
convention = "pep257"
add_ignore = "D100,D101,D102,D103,D104,D105,D106,D107"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
