[tool.poetry]
name = "shplot"
version = "0.0.0"  # managed by `poetry-dynamic-versioning`
description = "Wrapper for Matplotlib"
authors = ["Jayanth Koushik <mail@jkoushik.me>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/jayanthkoushik/shplot-old"
packages = [
  { include = "shplot", from = "src" },
]
include = [
  { path = "tests", format = "sdist" },
  { path = "docs", format = "sdist" },
  { path = "www", format = "sdist" },
  { path = "CHANGELOG.md", format = "sdist" },
]
exclude = [
  "docs/make.sh",
]

# keywords = [
# ]
classifiers = [
  "Development Status :: 4 - Beta",
  "Natural Language :: English",
  "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.8.1"
typing_extensions = { version = "^4.0", python = "<3.9" }
matplotlib = "^3.0"
corgy = "^9.2"

[tool.poetry.extras]

[tool.poetry.dev-dependencies]
pre-commit = "^3.2"
ruff = "^0.3.2"
mypy = "^1.1"
sphinx = "^5.3"
sphinx-markdown-builder = { git = "https://github.com/clayrisser/sphinx-markdown-builder" }
mkdocstrings = { extras = ["python-legacy"], version = "^0.22.0" }
mkdocs-material = "^9.1.15"
mike = { git = "https://github.com/jimporter/mike" }

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[tool.poetry-dynamic-versioning.substitution]
files = ["*/_version.py"]

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.ruff.lint]
select = [
  "F",
  "E4",
  "E7",
  "E9",
  "W",
  "I",
  "N",
  "D2",
  "D3",
  "D4",
  "ANN0",
  "ANN2",
  "ANN4",
  "B",
  "A",
  "G",
  "SIM",
  #"TCH",
  "PLC",
  "PLE",
  "PLW",
  "RUF",
]
ignore-init-module-imports = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403", "F405"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
ignore-fully-untyped = true
suppress-dummy-args = true
suppress-none-returning = true

[tool.ruff.lint.isort]
combine-as-imports = true
split-on-trailing-comma = false

[tool.ruff.lint.pycodestyle]
max-doc-length = 72

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
